# tea-cfm_beta

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
app/: __init__.py  config.py  formatting.py  services.py  theme.py
app/components/: __init__.py  charts.py  kpi.py  project_form.py  sidebar.py
app/views/: __init__.py  assumptions.py  new_project.py  overview.py  project_detail.py
data/: global_assumptions.yaml
data/projects/: template-agri.yaml  template-konventionell.yaml
docs/: ARCHITECTURE.md
engine/: __init__.py  cashflow.py  energy.py  financing.py  io_excel.py  io_yaml.py  kpis.py  models.py  opex.py  pipeline.py  revenue.py  sensitivity.py  tax.py  timeline.py
tests/: conftest.py  test_app_helpers.py  test_financing_tax.py  test_model_optionen.py  test_pipeline_kpis_io.py  test_revenue.py  test_timeline_energy_opex.py  test_ui_smoke.py
