[project]
name = "tea-pv-platform"
version = "2.2.0"
description = "TEA PV-Projektbewertung – Wirtschaftlichkeitsrechnung für PV-Projekte nach dem österreichischen EAG-Marktprämienmodell"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10",
    "pandas>=2.2",
    "numpy>=1.26",
    # pyarrow 25.0.0 hat einen reproduzierbaren Segmentation-Fault-Bug beim
    # Rendern von st.dataframe() (getestet gegen numpy 2.5.1 / pandas 3.0.3).
    # Die Versionen 21, 23 und 24 sind stabil, deshalb < 25 pinnen.
    "pyarrow>=20,<25",
    "numpy-financial>=1.0",
    "scipy>=1.13",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "streamlit>=1.40",
    "plotly>=5.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # Zeilenlaenge: deutsche Fachbegriffe + Docstrings sind lang
    "SIM108", # ternary statt if/else: Lesbarkeit geht hier vor
    "UP042",  # str-Enum statt StrEnum: bewusst, wegen Python-3.11-Support
]

[tool.ruff.lint.per-file-ignores]
# Views/Komponenten: bewusste spaete Streamlit-Importe im Entry-Point.
"streamlit_app.py" = ["E402"]
"tests/*" = ["E402"]
